--- a/style_main.css
+++ b/style_main.css
@@ -2,95 +2,109 @@
 font-family: 'Heebo', sans-serif;
 font-family: 'Roboto Slab', serif;*/
 body{
-    margin: 0px;
-    background-color: #F4F4F4;
+  margin: 0px;
+  background-color: #F4F4F4;
 }
 .header{
-    display: flex;
-    width: 100%;
-    height: 75px;
-    background-color: #A03E3E;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 5px, 20px, 5px, 50px;
+  display: flex;
+  width: 100%;
+  height: 75px;
+  background-color: #A03E3E;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px, 20px, 5px, 50px;
 }
 #logo_img{
-    width: 45px;
-    padding-left: 5%;
+  width: 45px;
+  padding-left: 5%;
 
 }
 #header_img{
-    width: 45px;
+  width: 45px;
 }
 .head_right{
-    display: flex;
-    align-items: center;
-    margin-right: 6%;
-    justify-content: space-between;
-    width: 15%;
+  display: flex;
+  align-items: center;
+  margin-right: 6%;
+  justify-content: space-between;
+  width: 15%;
 }
 .head_left{
-    display: flex;
-    align-items: center;
-    margin-left: 6%;
+  display: flex;
+  align-items: center;
+  margin-left: 6%;
 }
 .header p{
-    font-family: 'Bruno Ace SC';
-    font-size: 40px;
-    font-weight:100;
-    color: white;
-    padding-left: 20px;
+  font-family: 'Bruno Ace SC';
+  font-size: 40px;
+  font-weight:100;
+  color: white;
+  padding-left: 20px;
 }
 .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
 } 
 .switch input {
-    display:none;
+  display:none;
 }
 .title_box{
-    font-family: 'Roboto Slab', serif;
-    display: flex;
-    justify-content: center;
-    font-size: 38px;
-    margin-top: 40px;
-    font-weight:600;
+  font-family: 'Roboto Slab', serif;
+  display: flex;
+  justify-content: center;
+  font-size: 38px;
+  margin-top: 40px;
+  font-weight:600;
 
 }
 .carousel{
-    display: flex;
-    justify-content: center;
-    margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
 }
 .carousel-container {
-    overflow: hidden;
-    width: 96%;
-  }
-  
-  .carousel_img {
-    display: flex;
-    transition: transform 0.5s ease;
+  overflow: hidden;
+  width: 96%;
+}
 
-  }
+.carousel_img {
+  display: flex;
+  transition: transform 0.5s ease;
+
+}
+
+.carousel_img img {
+  width: calc(100% / 4);
+  margin-right: 10px;
   
-  .carousel_img img {
-    width: calc(100% / 4);
-    margin-right: 10px;
-    
+}
+
+@media (max-width: 768px) {
+  .carousel img {
+    width: calc(100% / 3);
   }
-  
-  @media (max-width: 768px) {
-    .carousel img {
-      width: calc(100% / 3);
-    }
+}
+
+@media (max-width: 576px) {
+  .carousel img {
+    width: calc(100% / 2);
   }
-  
-  @media (max-width: 576px) {
-    .carousel img {
-      width: calc(100% / 2);
-    }
-  }
-  
+}
+
+.type_selector{
+  margin: 3%;
+  width: 94%;
+  height: 15%;
+  background: #F4F4F4;
+  border: 3px solid #000000;
+  border-radius: 5%;
+  display: flex;
+  justify-content: space-around;
+}
+
+#all_types{
+
+}
