--- a/views/main.html
+++ b/views/main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ticket.che</title>
-    <link rel="stylesheet" href="style_main.css">
+    <link rel="stylesheet" href="styles/style_main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Heebo&family=Roboto+Slab&display=swap" rel="stylesheet">
@@ -76,6 +76,6 @@
             <label for="kids">Дітям</label>
         </div>
     </div>
-<script src="script_main.js"></script>
+    <script src="scripts/script_main.js"></script>
 </body>
 </html>
