--- a/views/druzhba.html
+++ b/views/druzhba.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ticket.che</title>
-    <link rel="stylesheet" href="style_dram.css">
+    <link rel="stylesheet" href="../styles/style_druzhba.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Heebo&family=Roboto+Slab&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.png">
+    
 </head>
 <body>
-    <script src="script_dram.js"></script>
+    <script src="../scripts/script_druzhba.js"></script>
 </body>
 </html>
