--- a/views/fila.html
+++ b/views/fila.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ticket.che</title>
-    <link rel="stylesheet" href="style_fila.css">
+    <link rel="stylesheet" href="../styles/style_fila.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Heebo&family=Roboto+Slab&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
 </head>
 <body>
     <header>
         <div class="header">
             <div class="head_left">
-            <img id="logo_img" src="images\favicon.png" alt="icon">
+            <img id="logo_img" src="..\images\favicon.png" alt="icon">
             <p>Ticket.che</p>
             </div>
             <div class="head_right">
-                <img id="header_img" src="images\user.png" alt="icon">
-                <img id="header_img" src="images\shopping_cart.png" alt="icon">
+                <img id="header_img" src="..\images\user.png" alt="icon">
+                <img id="header_img" src="..\images\shopping_cart.png" alt="icon">
             </div>
         </div>
     </header>
@@ -28,6 +28,6 @@
     <footer>
         <div><p>10% від суми йде у фонд ЗСУ</p></div>
     </footer>
-    <script src="script_fila.js"></script>
+    <script src="..\scripts\script_fila.js"></script>
 </body>
 </html>
