concert_block added on main page

--- a/ejs-views/index.ejs
+++ b/ejs-views/index.ejs
@@ -77,9 +77,22 @@
         </div>
     </div>
 
-    <div>
-        
-    </div>
+    <section>
+        <div>
+            <div class="image_concert"><img src="/«МАВКА.ШОУ».jpeg" alt="Мавка"></div>
+            <div class="text_concert">
+                <h1>«Мавка.шоу»</h1>
+                <p class="p1_concert">Грандіозна премʼєра від творців шоу «Вартові Мрій» та «Winterra», створена за мотивами найочікуванішого українського мультиплікаційного фільму «Мавка. Лісова пісня».</p>
+                <p class="p_concert">12 травня, 2023</p>
+                <p class="p_concert">Міський будинок культури ім. Івана Кулика</p>
+            </div>
+            <div class="price_concert">
+                <p class="p1_concert">Ціна: 400</p>
+                <input type="button" value="Купити">
+            </div>
+        </div>
+        <hr>
+    </section>
     <input type="button" value="Завантажити ще">
     <script src="/script_main.js"></script>
 </body>
