started dram, fila, druzhba pages

--- a/ejs-views/dram.ejs
+++ b/ejs-views/dram.ejs
@@ -13,6 +13,14 @@
 </head>
 <body>
     <%- include('./partials/header.ejs') %>
+    <div class="content">
+        <span class="concertname"></span>
+        <img src="" alt="">
+        <div class="price_block"><div class="price"></div><span class="price_num"></span></div>
+    </div>
+    <footer>
+        <div><p>10% від суми йде у фонд ЗСУ</p></div>
+    </footer>
     <script src="/script_dram.js"></script>
 </body>
 </html>
