--- a/ejs-views/index.ejs
+++ b/ejs-views/index.ejs
@@ -56,7 +56,7 @@
     </div>
     <div class="type_selector">
         <div>
-            <input type="checkbox" name="type" id="all_types" value="all" onclick="changeCheckbox('all')" <% if (!checkedTypes || checkedTypes.includes('all')) { %> checked <% } %>>
+            <input type="checkbox" name="type" id="all_types" value="all" onclick="changeCheckbox('all')" class="checkbox" <% if (!checkedTypes || checkedTypes.includes('all')) { %> checked <% } %>>
             <label for="all">Усі типи</label>
         </div>
         <div>
