--- a/ejs-views/fila.ejs
+++ b/ejs-views/fila.ejs
@@ -13,7 +13,11 @@
 </head>
 <body>
     <%- include('./partials/header.ejs') %>
-    <div class="content"></div>
+    <div class="content">
+        <span class="concertname"></span>
+        <img src="" alt="">
+        <div class="price_block"><div class="price"></div><span class="price_num"></span></div>
+    </div>
     <footer>
         <div><p>10% від суми йде у фонд ЗСУ</p></div>
     </footer>
