--- a/ejs-views/partials/header.ejs
+++ b/ejs-views/partials/header.ejs
@@ -4,6 +4,7 @@
         <img id="logo_img" src="/favicon.png" alt="icon">
         <p>Ticket.che</p>
         </div>
+        <div class="ukraine">Все буде Україна!</div>
         <div class="head_right">
             <img id="header_img" src="/user.png" alt="icon">
             <img id="header_img" src="/shopping_cart.png" alt="icon">
