--- a/ejs-views/druzhba.ejs
+++ b/ejs-views/druzhba.ejs
@@ -19,7 +19,7 @@
         <img src="" alt="">
         <div class="price_block"><div class="price"></div><span class="price_num"></span></div>
     </div>
-
+    <%- include('./partials/authentification.ejs') %>
     <footer>
         <div><p>10% від суми йде у фонд ЗСУ</p></div>
     </footer>
