--- a/ejs-views/partials/authentification.ejs
+++ b/ejs-views/partials/authentification.ejs
@@ -5,7 +5,7 @@
         <input type="text" id="login" name="login">
         <label for="password"><p>Пароль</p></label>
         <input type="password" id="password" name="password">
-        <a title="Ввійти" class="close" id="logIn">Ввійти</a>
+        <a title="Ввійти" class="close" id="btn">Ввійти</a>
     </div>
     <div class="SignUp">
         <h2>Реєстрація</h2>
@@ -15,7 +15,7 @@
         <input type="password" id="password" name="password">
         <label for="password"><p>Електронна пошта</p></label>
         <input type="email" id="email" name="email">
-        <a title="Ввійти" class="close" id="logIn">Зареєструватися</a>
+        <a title="Ввійти" class="close" id="btn">Зареєструватися</a>
     </div>
 </div>
 <div id="openModalLogined" class="modalDialog">
