--- a/ejs-views/fila.ejs
+++ b/ejs-views/fila.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ticket.che</title>
-    <link rel="stylesheet" href="/style_fila.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Heebo&family=Roboto+Slab&display=swap" rel="stylesheet">
@@ -14,9 +14,16 @@
 <body>
     <%- include('./partials/header.ejs') %>
     <div class="content">
-        <span class="concertname"></span>
-        <img src="" alt="">
-        <div class="price_block"><div class="price"></div><span class="price_num"></span></div>
+        <span class="concertname"><%= concert.concertname %>, <span class="price">ціна: <%= concert.price %> грн</span></span>
+        <img src="/fila.jpg" alt="">
+        <div class="seat">
+            <label for="seat">Місце</label>
+            <input type="number" id="seat">
+        </div>
+        <div class="seat">
+            <label for="row">Ряд</label>
+            <input type="number" id="row">
+        </div>
     </div>
     <%- include('./partials/authentification.ejs') %>
     <footer>
