--- a/ejs-views/partials/authentification.ejs
+++ b/ejs-views/partials/authentification.ejs
@@ -1,17 +1,19 @@
 <div id="openModal" class="modalDialog">
-    <div>
+
         <div class="LogIn">
         <center><h2>Ввійти в акаунт</h2>
         <label for="login"><p>Ім'я користувача</p></label>
         <input type="text" id="login" name="login">
         <label for="password"><p>Пароль</p></label>
         <input type="password" id="password" name="password">
-        <a title="Ввійти" class="close" id="btn">Ввійти</a></center>
+        <a title="Ввійти" class="close" id="btn">Ввійти</a>
+
+        <button class="button" onclick="showRegisterForm()">Ввійти</button>
+        <button class="button sign" onclick="showLoginForm()">Зареєструватися</button></center>
     </div>
-    <input type="button" value="Ввійти" class="button enter">
-    <input type="button" value="Зареєструватися" class="button sign">
+    
     <div class="SignUp">
-        <center><h2>Реєстрація</h2></center>
+        <center><h2>Реєстрація</h2>
         <label for="login"><p>Ім'я користувача</p></label>
         <input type="text" id="login" name="login">
         <label for="password"><p>Пароль</p></label>
@@ -19,7 +21,10 @@
         <label for="password"><p>Електронна пошта</p></label>
         <input type="email" id="email" name="email">
         <a title="Ввійти" class="close" id="btn">Зареєструватися</a>
-    </div>
+
+        <button class="button" onclick="showRegisterForm()">Ввійти</button>
+        <button class="button sign" onclick="showLoginForm()">Зареєструватися</button></center>
+
 </div>
 </div>
 <div id="openModalLogined" class="modalDialog">
@@ -32,19 +37,24 @@
 </div>
 <style>
 .button{
+    font-family: 'Roboto Slab';
 	background: #75855D;
+    font-size: 18px;
 	color: #FFFFFF;
 	height: 50px;
 	text-align: center;
 	text-decoration: none;
-	font-weight: bold;
+	font-weight: 300;
 	border-radius: 4px;
-	box-shadow: 1px 1px 3px #000;
-    width: 100px;
-    margin-top: 30px;
+    width: 170px;
+    margin-top: 50px;
     position: relative;
-    margin-bottom: 300px;
-}   
+}  
+
+.sign{
+    background-color:  #A03E3E;
+
+} 
 .modalDialog {
     position: fixed;
     font-family: 'Roboto Slab';
@@ -52,7 +62,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba(0,0,0,0.8);
+    background: rgba(0, 0, 0, 0.881);
     z-index: 99999;
     transition: opacity 400ms ease-in;
     display: none;
@@ -98,16 +108,48 @@
 	height: 33px;
 	text-align: center;
 	text-decoration: none;
-	font-weight: bold;
+	font-weight: 300;
 	border-radius: 4px;
 	box-shadow: 1px 1px 3px #000;
     width: 85px;
     margin-top: 30px;
-
 }
-
 .close:hover { 
   background-color: #484f3d;
   color: rgb(224, 224, 224);
 }
+.modal-front {
+  background-color: #f1f1f1;
+  transform: rotateY(0deg);
+}
+
+.modal-back {
+  background-color: #e9e9e9;
+  transform: rotateY(180deg);
+  transform-origin: right;
+}
+
+.modal-card.flipped .modal-front {
+  transform: rotateY(-180deg);
+}
+
+.modal-card.flipped .modal-back {
+  transform: rotateY(0deg);
+}
+
 </style>
+<script>
+function showRegisterForm() {
+  var front = document.querySelector('.LogIn');
+  var back = document.querySelector('.SignUp');
+  front.style.transform = 'rotateY(-180deg)';
+  back.style.transform = 'rotateY(0deg)';
+}
+
+function showLoginForm() {
+  var front = document.querySelector('.LogIn');
+  var back = document.querySelector('.SignUp');
+  front.style.transform = 'rotateY(0deg)';
+  back.style.transform = 'rotateY(180deg)';
+}
+</script>
