--- a/ejs-views/index.ejs
+++ b/ejs-views/index.ejs
@@ -16,8 +16,8 @@
     <header>
         <div class="header">
             <div class="head_left">
-            <img id="logo_img" src="/favicon.png" alt="icon">
-            <p>Ticket.che</p>
+                <img id="logo_img" src="/favicon.png" alt="icon">
+                <p>Ticket.che</p>
             </div>
             <div class="head_right">
                 <div>
@@ -85,7 +85,7 @@
                 <div>
                     <div class="image_concert"><img src="<%= poster %>"></div>
                     <div class="text_concert">
-                        <a href="<%= '/'+redirect+'/'+id %>"><%= concertname %></a>
+                        <a href="<%= '/concert/'+id %>"><%= concertname %></a>
                         <p class="p1_concert"><%= description %></p>
                         <p class="p_concert"><%= date %></p>
                         <p class="p_concert"><%= time %></p>
