--- a/ejs-views/partials/header.ejs
+++ b/ejs-views/partials/header.ejs
@@ -4,7 +4,7 @@
         <img id="logo_img" src="/favicon.png" alt="icon">
         <p>Ticket.che</p>
         </div>
-        <div><a href="https://rebuild.foundation/?utm_source=google&utm_medium=cpc&utm_campaign=Search_%D0%9Ci%D0%BA%D1%80%D0%BE_%D0%94i%D0%BC_UA_UA&utm_content=%D0%9Ci%D0%BA%D1%80%D0%BE_%D0%94i%D0%BC_UA_UA&utm_term=%D0%B1%D0%BB%D0%B0%D0%B3%D0%BE%D0%B4%D1%96%D0%B9%D0%BD%D0%B8%D0%B9%20%D1%84%D0%BE%D0%BD%D0%B4&gclid=CjwKCAjw04yjBhApEiwAJcvNoSqnx0zlcp4bsjEmoEPs44FnIF_mU3yYUDo0Fu_KFPFnuw-QvbNoLBoCzWIQAvD_BwE" style="color: white; text-decoration: none;  font-size: 30px; font-family: 'Roboto Slab';">Все буде Україна!</a></div>
+        <div><a href="https://rebuild.foundation/?utm_source=google&utm_medium=cpc&utm_campaign=Search_%D0%9Ci%D0%BA%D1%80%D0%BE_%D0%94i%D0%BC_UA_UA&utm_content=%D0%9Ci%D0%BA%D1%80%D0%BE_%D0%94i%D0%BC_UA_UA&utm_term=%D0%B1%D0%BB%D0%B0%D0%B3%D0%BE%D0%B4%D1%96%D0%B9%D0%BD%D0%B8%D0%B9%20%D1%84%D0%BE%D0%BD%D0%B4&gclid=CjwKCAjw04yjBhApEiwAJcvNoSqnx0zlcp4bsjEmoEPs44FnIF_mU3yYUDo0Fu_KFPFnuw-QvbNoLBoCzWIQAvD_BwE" style="color: white; text-decoration: none; font-family: 'Roboto Slab';" class="ukraina">Все буде Україна!</a></div>
         <div class="head_right">
             <a href="#openModal"><img id="header_img" src="/user.png" alt="icon"></a>
             <a href=""><img id="header_img" src="/shopping_cart.png" alt="icon"></a>
