--- a/ejs-views/index.ejs
+++ b/ejs-views/index.ejs
@@ -27,7 +27,7 @@
                     </label>
                 </div>
                 <a href="#openModal"><img id="header_img" src="/user.png" alt="icon"></a>
-                <a href=""><img id="header_img" src="/shopping_cart.png" alt="icon"></a>
+                <a href="/shopping_cart"><img id="header_img" src="/shopping_cart.png" alt="icon"></a>
             </div>
         </div>
     </header>
@@ -104,6 +104,19 @@
             <% }) %>
         <% } %>
     </section>
+    <footer>
+        <div><p>10% від суми квитків йде у фонд ЗСУ</p></div>
+        <hr>
+        <div class="foot_left">
+            <img id="foot_img" src="/favicon.png" alt="icon">
+            <p>Ticket.che</p>
+        </div>
+        <div class="foot_right">
+            <img src="/facebook.png" alt="">
+            <img src="/telegram.png" alt="">
+            <img src="/phone.png" alt="">
+        </div>
+    </footer>
     <script src="/script_main.js"></script>
 </body>
 </html>
