--- a/ejs-views/index.ejs
+++ b/ejs-views/index.ejs
@@ -105,16 +105,18 @@
         <% } %>
     </section>
     <footer>
-        <div><p>10% від суми квитків йде у фонд ЗСУ</p></div>
+        <div class="foot_text"><p>10% від суми квитків йде у фонд ЗСУ</p></div>
         <hr>
-        <div class="foot_left">
-            <img id="foot_img" src="/favicon.png" alt="icon">
-            <p>Ticket.che</p>
-        </div>
-        <div class="foot_right">
-            <img src="/facebook.png" alt="">
-            <img src="/telegram.png" alt="">
-            <img src="/phone.png" alt="">
+        <div class="left_right">
+            <div class="foot_left">
+                <img id="foot_img" src="/favicon.png" alt="icon">
+                <p>Ticket.che</p>
+            </div>
+            <div class="foot_right">
+                <img src="/facebook.png" alt="">
+                <img src="/telegram.png" alt="">
+                <img src="/phone.png" alt="">
+            </div>
         </div>
     </footer>
     <script src="/script_main.js"></script>
