--- a/styles/style_main.css
+++ b/styles/style_main.css
@@ -231,8 +231,9 @@ section > hr{
   justify-self: center;
 }
 
+/* Футер */
 footer {
-  height: 50px;
+  height: 200px;
   background: #75855D;
   width: 100%;
   position: relative;
@@ -242,16 +243,56 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  justify-content: space-between;
   font-family: 'Roboto Slab';
   color: white;
 }
+.foot_text{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+#foot_img{
+  width: 50px;
+  height: 50px;
+  margin-top: 18px;
+  margin-right: 10px;
+  margin: 18px 10px 0 10px;
 
+}
 .foot_left{
-  align-self: flex-start;
+  display: flex;
+  flex-direction: row;
+}
+.left_right{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.foot_right{
+  width: 260px;
+  object-fit: cover;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 40px;
+  margin-top: 20px;
+}
+.foot_right > img{
+  width: 40px;
+}
+.foot_left > p{
+  font-family: 'Bruno Ace SC';
+  font-size: 30px;
+  font-weight:100;
 }
 
-.foot_right{
-  align-self: flex-end;
+footer > hr{
+  width: 85%;
+  height: 3px;
+  background-color:  #ffffff;
+  justify-self: center;
 }
 
 @media screen and (max-width: 768px){
@@ -310,6 +351,8 @@ footer {
     font-size: 15px;
   }
 }
+
+
 @media screen and (max-width: 1100px){
   section > div{
     flex-direction: column;
